--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">  
+            <div class="leftcolumn"> 
+                <div class="card post">
+                    <h2>Day 144: Zanarkand, Ancient Metropolis // Lasting Fayth (FIN)</h2>
+                    <h5>Sketch Post, July 21, 2025</h5>
+                    <h4>Sketch: July 20, 2025</h4>
+                    <p>Sketch Time: 109-minutes</p>
+                    <p>I love that the two sides of the art reflect the respective side of the card's mechanics. This marks the end of my 4 weeks of random lands. Next up: Basics.</p>
+                    <img id="sketchDay144" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreia57ratvaszmikolt3wmct2fi6uqx2zcupjph2eysqcldcgzxxnzm@jpeg" height="200" alt="My sketch of Zanarkand, Ancient Metropolis // Lasting Fayth after 109 minutes.">
+                    <h6>My sketch of Zanarkand, Ancient Metropolis // Lasting Fayth after 109 minutes.</h6>
+                    <br>
+                    <img id="realDay144" class="sketchImage" src="https://cards.scryfall.io/large/front/8/8/881e4c00-3b9a-47a1-bf66-1badda994c88.jpg?1748706876" height="200" alt="(Original Artist: Erikas Perl)"></img>
+                    <h6>(Original Artist: Erikas Perl) <a href="https://scryfall.com/card/fin/293/zanarkand-ancient-metropolis-lasting-fayth" target="_blank" title="Zanarkand, Ancient Metropolis // Lasting Fayth">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lujfuzwtcs2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div> 
                 <div class="card post">
                     <h2>Day 143: Rogue's Passage (FDN)</h2>
                     <h5>Sketch Post, July 20, 2025</h5>
