--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 145: Plains (UGL)</h2>
+                    <h5>Sketch Post, July 22, 2025</h5>
+                    <h4>Sketch: July 21, 2025</h4>
+                    <p>Sketch Time: 20-minutes</p>
+                    <p>I like to match lands between basics or to the theme of the deck. Hopefully my brain will be chill with hodgepodge of randomized frames from throughout Magic's history.</p>
+                    <img id="sketchDay145" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreig6bfojec23qs4uixe6f6ecl2cobfpeb5rr2p6vydanpxqiv66e4y@jpeg" height="200" alt="My sketch of Plains (UGL) after 20 minutes.">
+                    <h6>My sketch of Plains (UGL) after 20 minutes.</h6>
+                    <br>
+                    <img id="realDay145" class="sketchImage" src="https://cards.scryfall.io/large/front/c/b/cb382733-ff3d-43e2-9b1e-efa2f7c28173.jpg?1562799157" height="200" alt="(Original Artist: Christopher Rush)"></img>
+                    <h6>(Original Artist: Christopher Rush) <a href="https://scryfall.com/card/ugl/84/plains" target="_blank" title="Plains (UGL)">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lulqasya4c2x" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 144: Zanarkand, Ancient Metropolis // Lasting Fayth (FIN)</h2>
                     <h5>Sketch Post, July 21, 2025</h5>
                     <h4>Sketch: July 20, 2025</h4>
