--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 147: Swamp (C17)</h2>
+                    <h5>Sketch Post, July 24, 2025</h5>
+                    <h4>Sketch: July 23, 2025</h4>
+                    <p>Sketch Time: 44-minutes</p>
+                    <p>This swamp has such good vibes. Even has a shooting star.</p>
+                    <img id="sketchDay147" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreielfb7pzlv4wy23yu4kcrcrh5jdhe4spnl7prcvx7tditnkz2ymdi@jpeg" height="200" alt="My sketch of Swamp (C17) after 44 minutes.">
+                    <h6>My sketch of Swamp (C17) after 44 minutes.</h6>
+                    <br>
+                    <img id="realDay147" class="sketchImage" src="https://cards.scryfall.io/large/front/d/2/d284ddf5-a1cb-4073-a53e-e8ccaaded32c.jpg?1562624363" height="200" alt="(Original Artist: Mark Poole)"></img>
+                    <h6>(Original Artist: Mark Poole) <a href="https://scryfall.com/card/c17/302/swamp" target="_blank" title="Swamp (C17)">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3luqrrby2222d" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 146: Island (JMP)</h2>
                     <h5>Sketch Post, July 23, 2025</h5>
                     <h4>Sketch: July 22, 2025</h4>
