--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Day 148: Mountain (SLD)</h2>
+                    <h5>Sketch Post, July 25, 2025</h5>
+                    <h4>Sketch: July 24, 2025</h4>
+                    <p>Sketch Time: 75-minutes</p>
+                    <p>Randomizing this Mountain art seemed like a daunting sketch, then I realized I could invert the original, sketch that, then reinvert my sketch. I think the results turned out better than expected.</p>
+                    <img id="sketchDay148i" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreialgajsqqew3kz2jqzyxxyppvckvvw52piqrpmuc2f22spcstzbfi@jpeg" height="200" alt="Inverted version of my sketch of Mountain (SLD) after 75 minutes.">
+                    <h6>Inverted version of my sketch of Mountain (SLD) after 75 minutes.</h6>
+                    <br>
+                    <img id="sketchDay148" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreigzckpof4fdxjcznswbbwswki65neinhigvcxlmb4xgvfpfdbbg6y@jpeg" height="200" alt="My sketch of Mountain (SLD) after 75 minutes.">
+                    <h6>My sketch of Mountain (SLD) after 75 minutes.</h6>
+                    <img id="realDay148" class="sketchImage" src="https://cards.scryfall.io/large/front/d/d/dd8611ec-6db3-4d29-8d3b-01e87bb38a55.jpg?1648839729" height="200" alt="(Original Artist: Ben Schnuck)"></img>
+                    <h6>(Original Artist: Ben Schnuck) <a href="https://scryfall.com/card/sld/418/mountain" target="_blank" title="Mountain (SLD)">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lutcy37td22z" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 147: Swamp (C17)</h2>
                     <h5>Sketch Post, July 24, 2025</h5>
                     <h4>Sketch: July 23, 2025</h4>
