--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn"> 
+            <div class="leftcolumn">                 
+                <div class="card post">
+                    <h2>Day 149: Forest (9ED)</h2>
+                    <h5>Sketch Post, July 26, 2025</h5>
+                    <h4>Sketch: July 25, 2025</h4>
+                    <p>Sketch Time: 69-minutes</p>
+                    <p>One of the earliest artworks I remember playing with when I started mtg. Sad to hear about his partial retirement, but he's focusing on his health, and so should you, whoever's reading this.</p>
+                    <img id="sketchDay149" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreih3vltqx6lapzg2ytgaukvzzjgw6prwa7rsjbggvhijlefvmxuipq@jpeg" height="200" alt="My sketch of Forest (9ED) after 69 minutes.">
+                    <h6>My sketch of Forest (9ED) after 69 minutes.</h6>
+                    <br>
+                    <img id="realDay149" class="sketchImage" src="https://cards.scryfall.io/large/front/e/7/e797e006-7379-45c2-a4b7-d0ef133379df.jpg?1562743324" height="200" alt="(Original Artist: John Avon)"></img>
+                    <h6>(Original Artist: John Avon) <a href="https://scryfall.com/card/9ed/350/forest" target="_blank" title="Forest (9ED)">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3luvsc2c2rc2b" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
                 <div class="card post">
                     <h2>Day 148: Mountain (SLD)</h2>
                     <h5>Sketch Post, July 25, 2025</h5>
