--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="leftcolumn">                 
+            <div class="leftcolumn"> 
+                <div class="card post">
+                    <h2>Day 150: Wastes (PLG25) (PLG25)</h2>
+                    <h5>Sketch Post, July 27, 2025</h5>
+                    <h4>Sketch: July 26, 2025</h4>
+                    <p>Sketch Time: 69-minutes</p>
+                    <p>This is my favorite of the dragon-eye lands. My LGS didn't have them, so it's auspicious to roll it for my randomized sketch (there are only 8 unique arts on scryfall, so the chances weren't bad).</p>
+                    <img id="sketchDay150" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreih6ibdbs65cde34i2ihopsankxgvzlpsik7kti6jzws63c7um35z4@jpeg" height="200" alt="My sketch of Wastes (PLG25) after 69 minutes.">
+                    <h6>My sketch of Wastes (PLG25) after 69 minutes.</h6>
+                    <br>
+                    <img id="realDay150" class="sketchImage" src="https://cards.scryfall.io/large/front/6/4/643d0ee1-016c-4ea8-b469-3599ae7532e6.jpg?1753423872" height="200" alt="(Original Artist: Ron Spencer)"></img>
+                    <h6>(Original Artist: Ron Spencer) <a href="https://scryfall.com/card/plg25/2/wastes" target="_blank" title="Wastes (PLG25)">Scryfall Link</a></h6>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3luyg47qebs2m" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>                
                 <div class="card post">
                     <h2>Day 149: Forest (9ED)</h2>
                     <h5>Sketch Post, July 26, 2025</h5>
