Small Project Update
Moving from the sketching phase to deckbuilding phase

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>TO THE DECKBUILDING PHASE!</h2>
+                    <h5>Project Update, July 29, 2025</h5>
+                    <p>5 months, 159 sketches, & 3 books later, I have finished my Scryfall Random Sketch Commander deck pool!</p>
+                    <p>I've made public decklists of the pool on Archidekt and Moxfield, so if you have any ideas of what cuts I should make, let me know!</p>
+                    <a target="_blank" href="https://archidekt.com/decks/13147209/scryfall_random_sketch_commander">Archidekt link</a>
+                    <br><a target="_blank" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg">Moxfield link</a>
+                    <br><br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lv5fwvzcik2l" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>Day 151: 4 Missing sides of DFCs from Days 1-60</h2>
                     <h5>Sketch Post, July 28, 2025</h5>
                     <h4>Sketch: July 27, 2025</h4>
