Digital Art Day 108

--- a/index.html
+++ b/index.html
@@ -30,12 +30,27 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Digital Art: Day 108's Season of Gathering</h2>
+                    <h5>Digital Art Post, July 30, 2025</h5>
+                    <h4>Digital Paint: June 15, 2025</h4>
+                    <p>Paint Time: 140-minutes</p>
+                    <p>I wanted to recreate the wooden stained style of the original piece, so I tried a different technique in clip studio paint. Thinking of applying it to more of my later sketches that are heavier in line strokes and not restricted to a timer, as I am starting to like the vibe of keeping most of the sketch intact.</p>
+                    <p>I also finished all my sketches, coming out to 159 in total, and with this technique, I feel like I could get to all of them. So, 151 more to go!</p>
+                    <img id="digitalDay108" class="sketchImage" src="https://cdn.cara.app/production/posts/587a38a9-778f-4663-8ff1-4e2979f9675c/sorocoroto-oNyYw_qeMZPxmPNqXHF3G-Day108_SeasonOfGathering-protected-intensity-DEFAULT-V2.png" height="300" alt="My digital painting of Season of Gathering after 140 minutes.">
+                    <h6>My digital painting of Season of Gathering after 140 minutes.</h6>
+                    <br>
+                    <br><a target="_blank" href="https://cara.app/post/587a38a9-778f-4663-8ff1-4e2979f9675c" title="cara.app/sorocoroto">Link to cara post.</a>
+                    <br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lv7tyvlwms2n" title="sorocoroto.bsky.social">Link to bluesky post.</a>
+                </div>
+                <div class="card post">
                     <h2>TO THE DECKBUILDING PHASE!</h2>
                     <h5>Project Update, July 29, 2025</h5>
                     <p>5 months, 159 sketches, & 3 books later, I have finished my Scryfall Random Sketch Commander deck pool!</p>
                     <p>I've made public decklists of the pool on Archidekt and Moxfield, so if you have any ideas of what cuts I should make, let me know!</p>
                     <a target="_blank" href="https://archidekt.com/decks/13147209/scryfall_random_sketch_commander">Archidekt link</a>
                     <br><a target="_blank" href="https://moxfield.com/decks/_qrcU7pkgE6lhgQCRw5YHg">Moxfield link</a>
+                    <img id="sketchbooks" class="sketchImage" src="https://cdn.bsky.app/img/feed_fullsize/plain/did:plc:vlb3baqyfxfheceuqyubujfl/bafkreiey43gokk34zdshpwvq5dzwwcglqoetovwlfzicb3tjbcpyusd454@jpeg" height="200" alt="My sketchbooks after 5489 minutes.">
+                    <h6>My sketchbooks after 5489 minutes.</h6>
                     <br><br><a target="_blank" href="https://bsky.app/profile/sorocoroto.bsky.social/post/3lv5fwvzcik2l" title="sorocoroto.bsky.social">Link to bluesky post.</a>
                 </div>
                 <div class="card post">
