Added Markdown Post

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <div class="row">
             <div class="leftcolumn"> 
                 <div class="card post">
+                    <h2>Gallery Page for Sketches</h2>
+                    <h5>Site Update, August 12, 2025</h5>
+                    <p>Been a bit since I posted. Was focusing on coding the card gallery when I suddenly became sick and needed a week of bedrest.</p>
+                    <p>Still not at 100%, but the good thing about taking a break in the middle of coding is that you can come back with fresh eyes. And now, I have a gallery to present: <a target="_self" href="https://stamayodesign.github.io/scryfall-random-sketch-commander/html/cardgallery.html">The Cards</a></p>                    
+                    <p>The gallery has all <b>159 sketches</b> with a filter at the top for different card types and card categories (ramp, card-advantage, etc.).</p>
+                    <p>You can also find that the link in the menu bar is finally active!</p>
+                </div>
+                <div class="card post">
                     <h2>Digital Art: Day 108's Season of Gathering</h2>
                     <h5>Digital Art Post, July 30, 2025</h5>
                     <h4>Digital Paint: June 15, 2025</h4>
